Emphasize config details for datalevin to work